changes after cherry-picking